refactor: eliminate all inline styles, centralize to CSS
Added 200+ CSS classes, removed inline styles from 8 files, fixed Tabulator dark theme

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,15 +12,15 @@
 </head>
 <body class="bg-main text-main">
     <div id="main-navbar"></div>
-    <div style="max-width: 900px; margin: 40px auto; padding: 0 20px;">
-        <h1 class="text-main" style="margin-bottom: 20px;">Welcome to FTrack</h1>
-        <p class="text-main" style="font-size: 1.1em; margin-bottom: 30px;">
+    <div class="page-container">
+        <h1 class="text-main page-title">Welcome to FTrack</h1>
+        <p class="text-main page-subtitle">
             A powerful financial forecasting tool for managing scenarios, accounts, and transactions.
         </p>
         
-        <div id="overview-section" style="margin-bottom: 40px;">
-            <h2 class="text-main" style="margin-bottom: 15px;">Getting Started</h2>
-            <ul class="text-main" style="line-height: 1.8; font-size: 1.05em;">
+        <div id="overview-section" class="page-section">
+            <h2 class="text-main page-section-title">Getting Started</h2>
+            <ul class="text-main page-section-list">
                 <li><strong>Forecast:</strong> Create and manage financial scenarios with projections</li>
                 <li><strong>Accounts:</strong> View and edit all accounts across scenarios</li>
                 <li><strong>Scenarios:</strong> Compare different financial plans side-by-side</li>
@@ -29,9 +29,9 @@
             </ul>
         </div>
 
-        <div style="background: var(--bg-tertiary); padding: 20px; border-radius: 8px; border: 1px solid var(--border-secondary);">
-            <h3 class="text-main" style="margin-bottom: 10px;">Features</h3>
-            <ul class="text-main" style="line-height: 1.7;">
+        <div class="feature-box">
+            <h3 class="text-main feature-box-title">Features</h3>
+            <ul class="text-main feature-box-list">
                 <li>Modern Tabulator-based grids with inline editing</li>
                 <li>Scenario-based financial planning</li>
                 <li>Account management with periodic changes</li>
