--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -25,7 +25,7 @@
 <body class="bg-main text-main">
     <div id="main-navbar"></div>
     <div id="panel-forecast"></div>
-    <!-- Tabulator library from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/tabulator-tables@6.2.0/dist/js/tabulator_esm.min.js"></script>
+    <!-- Tabulator library UMD from CDN - loads as window.Tabulator -->
+    <script src="https://cdn.jsdelivr.net/npm/tabulator-tables@6.2.0/dist/js/tabulator.min.js"></script>
 </body>
 </html>
