fixing double click tyo open import dialog.

--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -18,7 +18,7 @@
     <div id="panel-forecast"></div>
     <!-- Tabulator library UMD from CDN - loads as window.Tabulator -->
     <script src="https://cdn.jsdelivr.net/npm/tabulator-tables@6.2.0/dist/js/tabulator.min.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script type="module" src="../js/navbar.js"></script>
     <script>
       // Dynamic cache busting
       console.log('Loading forecast.js with timestamp:', Date.now());
