--- a/pages/home.html
+++ b/pages/home.html
@@ -41,6 +41,6 @@
         </div>
     </div>
     <script type="module" src="../js/config.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script type="module" src="../js/navbar.js"></script>
 </body>
 </html>
