updating account filtering

--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -10,7 +10,7 @@
     <!-- App theme -->
     <link rel="stylesheet" href="../styles/app.css">
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; connect-src 'self' https://cdn.jsdelivr.net;">
     <!-- Forecast page Tabulator theme moved to styles/app.css -->
 </head>
 <body class="bg-main text-main">
