adding background images to homepage

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/app.css">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
 </head>
-<body class="bg-main text-main">
+<body class="bg-main text-main home-page">
     <div id="main-navbar"></div>
     <div class="page-container">
         <h1 class="text-main page-title">Welcome to FTrack</h1>
