--- a/pages/home.html
+++ b/pages/home.html
@@ -34,9 +34,29 @@
                 <div class="whats-new-item">
                     <span class="whats-new-version">v0.7.1-beta</span>
                     <span class="whats-new-date">February 2, 2026</span>
+                    <h3 class="whats-new-title">Debt Repayment Scenario & Theme Switching</h3>
+                    <p class="whats-new-description">
+                        New Debt Repayment scenario type with summary cards showing payoff tracking, interest calculations, and zero-crossing dates. Plus dark/light theme switching with system preference detection.
+                    </p>
+                </div>
+                
+                <!-- v0.7.0-beta - 2026-02-01 -->
+                <div class="whats-new-item">
+                    <span class="whats-new-version">v0.7.0-beta</span>
+                    <span class="whats-new-date">February 1, 2026</span>
+                    <h3 class="whats-new-title">Periodic Changes</h3>
+                    <p class="whats-new-description">
+                        Apply automatic adjustments to accounts and transactions with percentage rates (compound interest) or fixed amounts (scheduled increases).
+                    </p>
+                </div>
+                
+                <!-- v0.6.2 - Previous -->
+                <div class="whats-new-item">
+                    <span class="whats-new-version">v0.6.2</span>
+                    <span class="whats-new-date">Previous Release</span>
                     <h3 class="whats-new-title">Documentation Center</h3>
                     <p class="whats-new-description">
-                        New panel-based documentation system with quick navigation and comprehensive guides for all features.
+                        Panel-based documentation system with quick navigation and comprehensive guides for all features.
                     </p>
                 </div>
             </div>
