--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -27,6 +27,8 @@
                         <a href="#" class="doc-panel-link" data-section="shortcuts">Shortcuts</a>
                         <a href="#" class="doc-panel-link" data-section="glossary">Glossary</a>
                         <a href="#" class="doc-panel-link" data-section="faq">FAQ</a>
+                        <a href="#" class="doc-panel-link" data-section="repo-docs">Repository Docs</a>
+                        <div id="repo-docs-nav"></div>
                     </nav>
                 </div>
             </div>
@@ -1065,11 +1067,27 @@
                         </p>
                     </div>
                 </div>
+
+                <!-- Repository Docs (Manifest-Driven) -->
+                <div class="doc-panel" id="panel-repo-docs" data-section="repo-docs">
+                    <h1 class="text-main page-title">Repository Docs</h1>
+                    <p class="section-text">
+                        This section is generated from repository documentation files. Navigation is driven by filename prefixes, and content is rendered from Markdown.
+                    </p>
+
+                    <div class="feature-box">
+                        <h2 class="text-main feature-box-title" id="repo-doc-title">Select a document</h2>
+                        <p class="section-text" id="repo-doc-meta"></p>
+                    </div>
+
+                    <article class="md-content" id="repo-doc-content"></article>
+                </div>
             </div>
         </div>
     </div>
     <script type="module" src="../js/config.js"></script>
     <script type="module" src="../js/navbar.js"></script>
     <script type="module" src="../js/doc-panel.js"></script>
+    <script type="module" src="../js/doc-repo-manifest.js"></script>
 </body>
 </html>
