--- a/pages/documentation.html
+++ b/pages/documentation.html
@@ -37,8 +37,8 @@
         </div>
     </div>
     <script type="module" src="../js/config.js"></script>
-    <script type="module" src="../js/navbar.js"></script>
-    <script type="module" src="../js/doc-panel.js"></script>
-    <script type="module" src="../js/doc-repo-manifest.js"></script>
+    <script type="module" src="../js/ui/controllers/navbar-controller.js"></script>
+    <script type="module" src="../js/ui/controllers/doc-panel-controller.js"></script>
+    <script type="module" src="../js/shared/doc-repo-manifest.js"></script>
 </body>
 </html>
