--- a/pages/home.html
+++ b/pages/home.html
@@ -125,6 +125,6 @@
         </div>
     </div>
     <script type="module" src="../js/config.js"></script>
-    <script type="module" src="../js/navbar.js"></script>
+    <script type="module" src="../js/ui/controllers/navbar-controller.js"></script>
 </body>
 </html>
