Home: update What's New
Show latest tagged releases (v0.8.3-beta, v0.8.2-beta, v0.8.1-alpha).

--- a/index.html
+++ b/index.html
@@ -30,33 +30,33 @@
         <div class="whats-new-section">
             <h2 class="text-main section-title">What's New</h2>
             <div class="whats-new-content">
-                <!-- v0.7.1-beta - 2026-02-02 -->
+                <!-- v0.8.3-beta - 2026-02-17 -->
                 <div class="whats-new-item">
-                    <span class="whats-new-version">v0.7.1-beta</span>
-                    <span class="whats-new-date">February 2, 2026</span>
-                    <h3 class="whats-new-title">Debt Repayment Scenario & Theme Switching</h3>
+                    <span class="whats-new-version">v0.8.3-beta</span>
+                    <span class="whats-new-date">2026-02-17</span>
+                    <h3 class="whats-new-title">Scenario Setup Reliability & GitHub Pages Fixes</h3>
                     <p class="whats-new-description">
-                        New Debt Repayment scenario type with summary cards showing payoff tracking, interest calculations, and zero-crossing dates. Plus dark/light theme switching with system preference detection.
+                        Improved scenario creation and switching behavior so grids refresh after setting Scenario Type and Period Type. Better handling for empty or corrupt storage on first run. Fixed lookup asset loading when hosted on GitHub Pages under a repo subpath.
                     </p>
                 </div>
                 
-                <!-- v0.7.0-beta - 2026-02-01 -->
+                <!-- v0.8.2-beta - 2026-02-17 -->
                 <div class="whats-new-item">
-                    <span class="whats-new-version">v0.7.0-beta</span>
-                    <span class="whats-new-date">February 1, 2026</span>
-                    <h3 class="whats-new-title">Periodic Changes</h3>
+                    <span class="whats-new-version">v0.8.2-beta</span>
+                    <span class="whats-new-date">2026-02-17</span>
+                    <h3 class="whats-new-title">Debt Modeling Enhancements</h3>
                     <p class="whats-new-description">
-                        Apply automatic adjustments to accounts and transactions with percentage rates (compound interest) or fixed amounts (scheduled increases).
+                        Better support for debt payoff workflows, including scheduled rate changes and improved Forecast UI stability for scenario-based modeling.
                     </p>
                 </div>
                 
-                <!-- v0.6.2 - Previous -->
+                <!-- v0.8.1-alpha - 2026-02-15 -->
                 <div class="whats-new-item">
-                    <span class="whats-new-version">v0.6.2</span>
-                    <span class="whats-new-date">Previous Release</span>
-                    <h3 class="whats-new-title">Documentation Center</h3>
+                    <span class="whats-new-version">v0.8.1-alpha</span>
+                    <span class="whats-new-date">2026-02-15</span>
+                    <h3 class="whats-new-title">Solver & Forecast Improvements</h3>
                     <p class="whats-new-description">
-                        Panel-based documentation system with quick navigation and comprehensive guides for all features.
+                        Continued improvements to the Advanced Goal Solver and Forecast workflows to better support planning and projections.
                     </p>
                 </div>
             </div>
