--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <div class="whats-new-section">
             <h2 class="text-main section-title">What's New</h2>
             <div class="whats-new-content">
+                <!-- v0.8.4-beta - 2026-02-17 -->
+                <div class="whats-new-item">
+                    <span class="whats-new-version">v0.8.4-beta</span>
+                    <span class="whats-new-date">2026-02-17</span>
+                    <h3 class="whats-new-title">Expanded Documentation Coverage</h3>
+                    <p class="whats-new-description">
+                        Added missing user guides for Budget workflows, Funds scenarios, and Import/Export. The Overview doc now includes a quick chooser for scenario types and goal planning modes.
+                    </p>
+                </div>
+
                 <!-- v0.8.3-beta - 2026-02-17 -->
                 <div class="whats-new-item">
                     <span class="whats-new-version">v0.8.3-beta</span>
@@ -47,16 +57,6 @@
                     <h3 class="whats-new-title">Debt Modeling Enhancements</h3>
                     <p class="whats-new-description">
                         Better support for debt payoff workflows, including scheduled rate changes and improved Forecast UI stability for scenario-based modeling.
-                    </p>
-                </div>
-                
-                <!-- v0.8.1-alpha - 2026-02-15 -->
-                <div class="whats-new-item">
-                    <span class="whats-new-version">v0.8.1-alpha</span>
-                    <span class="whats-new-date">2026-02-15</span>
-                    <h3 class="whats-new-title">Solver & Forecast Improvements</h3>
-                    <p class="whats-new-description">
-                        Continued improvements to the Advanced Goal Solver and Forecast workflows to better support planning and projections.
                     </p>
                 </div>
             </div>
