--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -13,12 +13,10 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; connect-src 'self' https://cdn.jsdelivr.net;">
     <!-- Forecast page Tabulator theme moved to styles/app.css -->
 </head>
-<body class="bg-main text-main">
-    <div id="main-navbar"></div>
-    <div id="panel-forecast"></div>
+<body class="bg-main text-main dashboard-shell">
+  <div id="panel-forecast"></div>
     <!-- Tabulator library UMD from CDN - loads as window.Tabulator -->
     <script src="https://cdn.jsdelivr.net/npm/tabulator-tables@6.2.0/dist/js/tabulator.min.js"></script>
-    <script type="module" src="../js/ui/controllers/navbar-controller.js"></script>
     <script>
       // Dynamic cache busting
       const script = document.createElement('script');
